--- a/eisvogel-v2.4.0.tex
+++ b/eisvogel-v2.4.0.tex
@@ -730,12 +730,15 @@ $if(table-use-row-colors)$
 $endif$
 $endif$
 
+$if(indent)$
+$else$
 %
 % remove paragraph indention
 %
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
 \setlength{\emergencystretch}{3em}  % prevent overfull lines
+$endif$
 
 %
 %
